- Added test documents.
* configure.in:
* test/testdoc1/Makefile.am:
* test/testdoc1/legal.xml:
* test/testdoc1/testdoc1.omf:
* test/testdoc1/testdoc1.xml:
- Added test documents.

* data/toc.xml.in:
- Handling System|... stuff from SK.

* stylesheets/Makefile.am:
- Removed db2html-tmp.xsl:

* stylesheets/db2html-biblio.xsl:
* stylesheets/db2html-index.xsl:
* stylesheets/db2html-navbar.xsl:
* stylesheets/db2html-synopsis.xsl:
* stylesheets/db2html.xsl:
- Various additions and improvements.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2003-12-26  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	* test/testdoc1/Makefile.am:
+	* test/testdoc1/legal.xml:
+	* test/testdoc1/testdoc1.omf:
+	* test/testdoc1/testdoc1.xml:
+	- Added test documents.
+
+	* data/toc.xml.in:
+	- Handling System|... stuff from SK.
+
 2003-12-24  Shaun McCance  <shaunm@gnome.org>
 
 	* src/Makefile.am:
