--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,15 @@
+2003-12-26  Shaun McCance  <shaunm@gnome.org>
+
+	* Makefile.am:
+	- Removed db2html-tmp.xsl:
+
+	* db2html-biblio.xsl:
+	* db2html-index.xsl:
+	* db2html-navbar.xsl:
+	* db2html-synopsis.xsl:
+	* db2html.xsl:
+	- Various additions and improvements.
+
 2003-12-24  Shaun McCance  <shaunm@gnome.org>
 
 	* Makefile.am:
