--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-27  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2003-12-27  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
