--- a/po/tr.po
+++ b/po/tr.po
@@ -8,103 +8,92 @@ msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-12-28 21:52+0000\n"
-"PO-Revision-Date: 2003-02-03 20:01+0200\n"
+"PO-Revision-Date: 2003-12-29 00:08+0000\n"
 "Last-Translator: Arman Aksoy (Armish) <armish@linux-sevenler.de>\n"
 "Language-Team: Turkish <gnome-turk@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: data/toc.xml.in.h:1 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Uygulamalar"
 
 #: data/toc.xml.in.h:2
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Masaüstü"
+msgstr "Masaüstü"
 
 #: data/toc.xml.in.h:3 src/yelp-man.c:434
 msgid "Development"
 msgstr "Geliştirme"
 
 #: data/toc.xml.in.h:4
-#, fuzzy
 msgid "Development Environments"
-msgstr "Geliştirme"
+msgstr "Geliştirme Ortamı"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Tools"
-msgstr "Geliştirme"
+msgstr "Geliştirme Araçları"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Editors"
-msgstr "/Dü_zenle"
+msgstr "Düzenleyiciler"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Education Applications"
-msgstr "Uygulamalar"
+msgstr "Eğitim Uygulamaları"
 
 #: data/toc.xml.in.h:8
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Oyunlar ve Eğlence"
 
 #: data/toc.xml.in.h:9
 msgid "General"
-msgstr ""
+msgstr "Genel"
 
 #: data/toc.xml.in.h:10
 msgid "Help Contents"
 msgstr "Yardım İçeriği"
 
 #: data/toc.xml.in.h:11
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Uygulamalar"
+msgstr "İnternet Uygulamaları"
 
 #: data/toc.xml.in.h:12
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:13
-#, fuzzy
 msgid "Kernels"
-msgstr "Çekirdek Yordamları"
+msgstr "Çekirdekler"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Uygulamalar"
+msgstr "Çokluortam Uygulamaları"
 
 #: data/toc.xml.in.h:15
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Ofis ve Üretkenlik Uygulamaları"
 
 #: data/toc.xml.in.h:16
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Uygulamalar"
+msgstr "Bilimsel Uygulamalar"
 
 #: data/toc.xml.in.h:17
 msgid "Securities"
-msgstr ""
+msgstr "Güvenlik"
 
 #: data/toc.xml.in.h:18
-#, fuzzy
 msgid "System"
-msgstr "Sistem Çağrıları"
+msgstr "Sistem"
 
 #: data/toc.xml.in.h:19
 msgid "Utilities"
-msgstr ""
+msgstr "Yardımcı programlar"
 
 #: data/toc.xml.in.h:20
-#, fuzzy
 msgid "X Applications"
-msgstr "Uygulamalar"
+msgstr "X Uygulamaları"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -112,15 +101,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "_Küçük/büyük harf duyarlı"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Bul"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Bul: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -153,20 +142,19 @@ msgstr ""
 
 #: src/yelp-db-pager.c:439
 msgid "Out of memory"
-msgstr ""
+msgstr "Bellek yetersiz"
 
 #: src/yelp-db-pager.c:598
 msgid "Titlepage"
-msgstr ""
+msgstr "Başlık sayfası"
 
 #: src/yelp-db-pager.c:600
-#, fuzzy
 msgid "Contents"
-msgstr "Yardım İçeriği"
+msgstr "İçindekiler"
 
 #: src/yelp-db-pager.c:618
 msgid "Unknown"
-msgstr ""
+msgstr "Bilinmeyen"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -243,9 +231,8 @@ msgid "System Administration"
 msgstr "Sistem Yönetimi"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Dökümanlar"
+msgstr "Belge Adresi"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
@@ -256,9 +243,8 @@ msgid "YelpTocPager: Pause count is negative."
 msgstr ""
 
 #: src/yelp-toc-pager.c:628 src/yelp-toc-pager.c:640
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "'%s' dökümanı yok"
+msgstr ""
 
 #: src/yelp-toc-pager.c:841
 msgid "Categories"
@@ -285,19 +271,16 @@ msgid "/_Edit"
 msgstr "/Dü_zenle"
 
 #: src/yelp-window.c:230
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Dü_zenle/_Sayfada bul..."
+msgstr "/Düzenle/_Bul..."
 
 #: src/yelp-window.c:233
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/Dü_zenle/_Yeniden bul"
+msgstr "/Düzenle/Sonrakini B_ul"
 
 #: src/yelp-window.c:236
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Dü_zenle/_Yeniden bul"
+msgstr "/Düzenle/Öncekini Bu_l"
 
 #: src/yelp-window.c:240
 msgid "/_Go"
@@ -316,24 +299,20 @@ msgid "/Go/_Home"
 msgstr "/Git/_Başlangıç"
 
 #: src/yelp-window.c:250
-#, fuzzy
 msgid "/Go/"
-msgstr "/_Git"
+msgstr "/_Git/"
 
 #: src/yelp-window.c:251
-#, fuzzy
 msgid "/Go/_Previous"
-msgstr "_Önceki"
+msgstr "/Git/Ö_nceki"
 
 #: src/yelp-window.c:254
-#, fuzzy
 msgid "/Go/_Next"
-msgstr "/Git/İ_ndeks"
+msgstr "/Git/_Sonraki"
 
 #: src/yelp-window.c:257
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Yardım İçeriği"
+msgstr "/Git/İç_indekiler"
 
 #: src/yelp-window.c:261
 msgid "/_Help"
@@ -401,9 +380,8 @@ msgid "translator_credits"
 msgstr "Görkem Çetin"
 
 #: src/yelp-window.c:1162
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "GNOME 2.0 için yardım tarayıcısı"
+msgstr "GNOME için bir yardım tarayıcı"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
