--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-29  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
+	* POTFILES.in: Added src/yelp-theme.c.
+
 2003-12-27  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
