--- a/po/nn.po
+++ b/po/nn.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-12-27 01:33+0100\n"
-"PO-Revision-Date: 2003-12-27 01:45+0100\n"
+"POT-Creation-Date: 2003-12-28 17:41+0100\n"
+"PO-Revision-Date: 2003-12-28 18:05+0100\n"
 "Last-Translator: Åsmund Skjæveland <aasmunds@fys.uio.no>\n"
 "Language-Team: Norwegian Nynorsk <i18n-nn@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -83,7 +83,7 @@ msgstr "Vitskaplege program"
 
 #: data/toc.xml.in.h:17
 msgid "Securities"
-msgstr ""
+msgstr "Tryggleik"
 
 #: data/toc.xml.in.h:18
 msgid "Utilities"
@@ -115,11 +115,12 @@ msgstr "_Neste"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Previous"
-msgstr "_Førre"
+msgstr "F_ørre"
 
 #: data/ui/yelp.glade.h:7
+#, fuzzy
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Gå til toppen av dokumentet når søket når slutten"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
