--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-29  Shaun McCance  <shaunm@gnome.org>
+
+	* test/testdoc1/testdoc1.xml:
+	- Put in a test for classsynopsis.
+
 2003-12-26  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in
