- Transpose Titlepage and Contents.
* src/yelp-db-pager.c:
- Transpose Titlepage and Contents.

* src/yelp-main.c:
- Handle startup notification.

* stylesheets/db2html-header.xsl
- Implement @label attribute.

* stylesheets/db2html-html.xsl:
* stylesheets/db2html-navbar.xsl:
- Fixes for prev/next links.

* stylesheets/db2html-toc.xsl:
- Deboldify section titles.

* test/testdoc1/testdoc1.xml:
- Change to 4.1.2.  I need to fix this fiasco.  ~sigh~

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2003-12-29  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-db-pager.c:
+	- Transpose Titlepage and Contents.
+
+	* src/yelp-main.c:
+	- Handle startup notification.
+
+	* test/testdoc1/testdoc1.xml:
+	- Change to 4.1.2.  I need to fix this fiasco.  ~sigh~
+
+2003-12-29  Shaun McCance  <shaunm@gnome.org>
+
 	* test/testdoc1/testdoc1.xml:
 	- Put in a test for classsynopsis.
 
