- Move Applets into Applications. - Accomodote non-standard
* data/toc.xml.in:
- Move Applets into Applications.
- Accomodote non-standard GNOME|Applications|Accessories.

* src/yelp-theme.c:
- Don't be an idiot.  Use snprintf.

* src/yelp-window.c:
- Make the busy cursor go away when erroring out.

* stylesheets/db2html-html.xsl:
- Make admonitions use the only theme color we have for now.

* stylesheets/db2html-list.xsl:
- Don't bold varlistentry/term.  I might change this back.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2003-12-29  Shaun McCance  <shaunm@gnome.org>
 
+	* data/toc.xml.in:
+	- Move Applets into Applications.
+	- Accomodote non-standard GNOME|Applications|Accessories.
+
+	* src/yelp-theme.c:
+	- Don't be an idiot.  Use snprintf.
+
+	* src/yelp-window.c:
+	- Make the busy cursor go away when erroring out.
+
+2003-12-29  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-uri.c:
 	- Consider #index to be equal to no fragment.
 
