- doc_name and doc_path were reversed for some reason.
* src/yelp-db-pager.c:
- doc_name and doc_path were reversed for some reason.

* stylesheets/db2html-html.xsl:
- Some fancification to the navbar.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-30  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-db-pager.c:
+	- doc_name and doc_path were reversed for some reason.
+
 2003-12-29  Shaun McCance  <shaunm@gnome.org>
 
 	* data/toc.xml.in:
