--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,6 +1,11 @@
 2003-12-30  Shaun McCance  <shaunm@gnome.org>
 
 	* db2html-html.xsl:
+	- Some fancification to the navbar.
+
+2003-12-30  Shaun McCance  <shaunm@gnome.org>
+
+	* db2html-html.xsl:
 	- Make admonitions use the only theme color we have for now.
 
 	* db2html-list.xsl:
