--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-30  Shaun McCance  <shaunm@gnome.org>
 
+	* configure.in: Version 2.5.2.
+
+2003-12-30  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-theme.c:
 	- Grab the default style if gtk_rc_get_style_by_paths returns NULL.
 
