--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,36 @@
+Changes in 2.5.2:
+-----------------
+* Lots and lots of work on the Find dialog          (Chee Bin HOH)
+* Page titles now show up in the titlebar           (Shaun McCance)
+* Non-existent pages are discovered faster          (Shaun McCance)
+* Sidebar selection follows loaded page again       (Shaun McCance)
+* Previous, Next, and TOC have menu items           (Shaun McCance)
+* Window icon from the icon theme, more to come     (Shaun McCance)
+* Pretty colored boxes that follow the theme        (Shaun McCance)
+* Admonition graphics work again                    (Shaun McCance)
+* Plenty more work on the DocBook XSLT              (Shaun McCance)
+* Display a busy cursor while loading               (Shaun McCance)
+* Put Titlepage and Contents in the right order     (Shaun McCance)
+* Prevent duplicate entry in history                (Shaun McCance)
+* Do startup notification right                     (Shaun McCance)
+* Various crashers and leaks fixed
+* Updated translations:
+  ar       (Arafat Medini)
+  be       (Ales Nyakhaychyk)
+  ca       (Jordi Mallach)
+  cs       (Miloslav Trmac)
+  da       (Ole Laursen)
+  de       (Christian Neumair)
+  el       (Nikos Charonitakis)
+  es       (Francisco Javier F. Serrador)
+  ja       (Takeshi AIHANA)
+  nl       (Tino Meinen)
+  nn       (Åsmund Skjæveland)
+  pl       (GNOME PL Team)
+  sr       (Danilo Šegan)
+  sr@Latn  (Danilo Šegan)
+  sv       (Christian Rose)
+
 Changes in 2.5.1:
 -----------------
 * Remove empty Categories headers from TOC      (Shaun McCance)
