- Fix intltool problem with dist.
* Makefile.am:
- Fix intltool problem with dist.

* configure.in:
- Version 2.5.2.1.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in 2.5.2.1:
+-------------------
+* Fix the intltool 0.28 build breakage
+
+
 Changes in 2.5.2:
 -----------------
 * Lots and lots of work on the Find dialog          (Chee Bin HOH)
