Update Czech translation

--- a/po/cs.po
+++ b/po/cs.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yelp VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-12-30 07:14-0600\n"
-"PO-Revision-Date: 2003-12-29 19:23+0100\n"
+"POT-Creation-Date: 2003-12-30 20:48+0100\n"
+"PO-Revision-Date: 2003-12-30 22:37+0100\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -18,9 +18,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Aplikace"
+msgstr "Aplety"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
@@ -394,7 +393,7 @@ msgstr "Prohlížeč nápovědy pro GNOME"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Poradí s prostředím GNOME"
+msgstr "Získat nápovědu o GNOME"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
