Updated Norwegian Nynorsk translation.
2004-01-01  Åsmund Skjæveland  <aasmunds@fys.uio.no>

	* nn.po: Updated Norwegian Nynorsk translation.

--- a/po/nn.po
+++ b/po/nn.po
@@ -1,15 +1,15 @@
 # translation of nn.po to Norwegian Nynorsk
 # Norwegian/Nynorsk translation of yelp.
-# Copyright (C) 2002, 2003 Free Software Foundation, Inc.
+# Copyright (C) 2002, 2003, 2004 Free Software Foundation, Inc.
 # Roy-Magne Mo <rmo@sunnmore.net>, 2002.
-# Åsmund Skjæveland <aasmunds@fys.uio.no>, 2003.
+# Åsmund Skjæveland <aasmunds@fys.uio.no>, 2003, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: nn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-12-30 07:14-0600\n"
-"PO-Revision-Date: 2003-12-28 18:05+0100\n"
+"PO-Revision-Date: 2004-01-01 15:19+0100\n"
 "Last-Translator: Åsmund Skjæveland <aasmunds@fys.uio.no>\n"
 "Language-Team: Norwegian Nynorsk <i18n-nn@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -18,9 +18,8 @@ msgstr ""
 "X-Generator: KBabel 1.0.2\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Program"
+msgstr "Panelprogram"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
@@ -91,9 +90,8 @@ msgid "Securities"
 msgstr "Tryggleik"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Systemkall"
+msgstr "System"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
@@ -128,9 +126,8 @@ msgid "_Previous"
 msgstr "F_ørre"
 
 #: data/ui/yelp.glade.h:7
-#, fuzzy
 msgid "_Wrap around"
-msgstr "_Gå til toppen av dokumentet når søket når slutten"
+msgstr "S_øk rundt"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -463,3 +460,4 @@ msgstr "Hjelp"
 
 #~ msgid "Enter phrase to search for in all documents"
 #~ msgstr "Tast in frase som det skal leitast etter i alle dokument"
+
