- A quick comment, to remind me.
* src/yelp-db-pager.c:
- A quick comment, to remind me.

* src/yelp-html-gtkhtml2.c:
- Don't let the html view shrink to nothing.

* src/yelp-window.c:
- Handle external URIs, like web sites and stuff.

* stylesheets/db2html-header.xsl:
- Actually implement 'header' for all relevant elements.

* stylesheets/db2html-html.xsl:
- Some formattings changes.

* stylesheets/db2html-toc.xsl:
- Don't replicate the 'xref' template.  That's silly.

* stylesheets/db2html-xref.xsl:
- Do links properly.  Duh.

* test/testdoc1/testdoc1.xml:
- Put in tests for some inline elements.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-01-01  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-db-pager.c:
+	- A quick comment, to remind me.
+
+	* src/yelp-html-gtkhtml2.c:
+	- Don't let the html view shrink to nothing.
+
+	* src/yelp-window.c:
+	- Handle external URIs, like web sites and stuff.
+
+	* test/testdoc1/testdoc1.xml:
+	- Put in tests for some inline elements.
+
 2003-12-31  Shaun McCance  <shaunm@gnome.org>
 
 	* src/Makefile.am:
