--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-02  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/db2html-param.xsl
+	- Implement yelp:chunk-depth PI.
+
 2004-01-01  Shaun McCance  <shaunm@gnome.org>
 
 	* db2html-header.xsl:
