- Started working on the jump-to-anchor thing.
* src/yelp-html-gtkhtml2.c:
* src/yelp-html.h:
* src/yelp-window.c:
- Started working on the jump-to-anchor thing.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-2003-01-02  Shaun McCance  <shaunm@gnome.org>
+2004-01-02  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-html-gtkhtml2.c:
+	* src/yelp-html.h:
+	* src/yelp-window.c:
+	- Started working on the jump-to-anchor thing.
+
+2004-01-02  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
 	- Implement yelp:chunk-depth PI.
