--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-03  Tõivo Leedjärv  <toivo@linux.ee>
+
+	* et.po: Updated Estonian tranlsation.
+
 2004-01-02  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
