--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-02  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated and revised Portuguese translation.
+
 2004-01-03  Tõivo Leedjärv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian tranlsation.
