--- a/po/pt.po
+++ b/po/pt.po
@@ -1,14 +1,14 @@
 # yelp's Portuguese Translation
-# Copyright (C) 2001 yelp
+# Copyright (C) 2001, 2004 yelp
 # Distributed under the same licence as yelp package
-# Duarte Loreto <happyguy_pt@hotmail.com>, 2001, 2002, 2003
+# Duarte Loreto <happyguy_pt@hotmail.com>, 2001, 2004
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 2.4\n"
+"Project-Id-Version: 2.6\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-12-30 07:14-0600\n"
-"PO-Revision-Date: 2003-07-18 00:56+0000\n"
+"POT-Creation-Date: 2004-01-02 22:19+0000\n"
+"PO-Revision-Date: 2004-01-02 22:30+0000\n"
 "Last-Translator: Duarte Loreto <happyguy_pt@hotmail.com>\n"
 "Language-Team: Portuguese <gnome_pt@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -16,100 +16,88 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Aplicações"
+msgstr "Applets"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Aplicações"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Ambiente de Trabalho"
+msgstr "Ambiente de Trabalho"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "Desenvolvimento"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Desenvolvimento"
+msgstr "Ambientes de Desenvolvimento"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Desenvolvimento"
+msgstr "Ferramentas de Desenvolvimento"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Editors"
-msgstr "/_Editar"
+msgstr "Editores"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Aplicações"
+msgstr "Aplicações Educativas"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Jogos e Entretenimento"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Geral"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
-msgstr "Conteudo Ajuda"
+msgstr "Conteúdo da Ajuda"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Aplicações"
+msgstr "Aplicações de Internet"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Rotinas Kernel"
+msgstr "Kernels"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Aplicações"
+msgstr "Aplicações Multimédia"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Aplicações de Escritório e Produtividade"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Aplicações"
+msgstr "Aplicações Científicas"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Segurança"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Chamadas Sistema"
+msgstr "Sistema"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Utilitários"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Aplicações"
+msgstr "Aplicações X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -117,19 +105,19 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "Sensível à c_apitalização"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Procurar"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Procurar: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
-msgstr "Segui_nte"
+msgstr "_Seguinte"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Previous"
@@ -137,7 +125,7 @@ msgstr "_Anterior"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Dar a volta"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -147,31 +135,30 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Fábrica Yelp"
 
-#: src/yelp-db-pager.c:241 src/yelp-window.c:758
-#, fuzzy, c-format
+#: src/yelp-db-pager.c:249 src/yelp-window.c:439 src/yelp-window.c:763
+#, c-format
 msgid "The document '%s' could not be opened"
-msgstr "O documento '%s' não existe"
+msgstr "Incapaz de abrir o documento '%s'"
 
-#: src/yelp-db-pager.c:424
+#: src/yelp-db-pager.c:429
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Nenhum atributo href encontrado em yelp:document"
 
-#: src/yelp-db-pager.c:439
+#: src/yelp-db-pager.c:444
 msgid "Out of memory"
-msgstr ""
+msgstr "Sem memória livre"
 
-#: src/yelp-db-pager.c:602
+#: src/yelp-db-pager.c:621
 msgid "Titlepage"
-msgstr ""
+msgstr "Título de página"
 
-#: src/yelp-db-pager.c:604
-#, fuzzy
+#: src/yelp-db-pager.c:623
 msgid "Contents"
-msgstr "Conteudo Ajuda"
+msgstr "Conteúdo"
 
-#: src/yelp-db-pager.c:622
+#: src/yelp-db-pager.c:641
 msgid "Unknown"
-msgstr ""
+msgstr "Desconhecido"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -184,7 +171,7 @@ msgstr "Incapaz de activar o Yelp: '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr "Incapaz de abrir janela."
+msgstr "Incapaz de abrir nova janela."
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
@@ -217,19 +204,19 @@ msgstr "PThreads"
 
 #: src/yelp-man.c:364
 msgid "System Calls"
-msgstr "Chamadas Sistema"
+msgstr "Chamadas de Sistema"
 
 #: src/yelp-man.c:369
 msgid "Library Functions"
-msgstr "Biblioteca Funções"
+msgstr "Bibliotecas de Funções"
 
 #: src/yelp-man.c:374
 msgid "Kernel Routines"
-msgstr "Rotinas Kernel"
+msgstr "Rotinas de Kernel"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
-msgstr "Dispositivos de Equipamento"
+msgstr "Dispositivos de Hardware"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
@@ -248,293 +235,157 @@ msgid "System Administration"
 msgstr "Administração de Sistema"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Documentos"
+msgstr "URI do Documento"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "O URI do documento a ser processado"
 
-#: src/yelp-toc-pager.c:260
+#: src/yelp-toc-pager.c:261
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: Contagem de pausa é negativa."
 
-#: src/yelp-toc-pager.c:628 src/yelp-toc-pager.c:640
-#, fuzzy
+#: src/yelp-toc-pager.c:649 src/yelp-toc-pager.c:661
 msgid "The table of contents could not be read."
-msgstr "O documento '%s' não existe"
+msgstr "Incapaz de ler o índice."
 
-#: src/yelp-toc-pager.c:841
+#: src/yelp-toc-pager.c:868
 msgid "Categories"
 msgstr "Categorias"
 
-#: src/yelp-toc-pager.c:862
+#: src/yelp-toc-pager.c:889
 msgid "Documents"
 msgstr "Documentos"
 
-#: src/yelp-window.c:223
+#: src/yelp-window.c:228
 msgid "/_File"
 msgstr "/_Ficheiro"
 
-#: src/yelp-window.c:224
+#: src/yelp-window.c:229
 msgid "/File/_New window"
 msgstr "/Ficheiro/_Nova janela"
 
-#: src/yelp-window.c:227
+#: src/yelp-window.c:232
 msgid "/File/_Close window"
 msgstr "/Ficheiro/_Fechar janela"
 
-#: src/yelp-window.c:231
+#: src/yelp-window.c:236
 msgid "/_Edit"
 msgstr "/_Editar"
 
-#: src/yelp-window.c:232
-#, fuzzy
+#: src/yelp-window.c:237
 msgid "/Edit/_Find..."
-msgstr "/Editar/_Procurar na página..."
+msgstr "/Editar/_Procurar..."
 
-#: src/yelp-window.c:235
-#, fuzzy
+#: src/yelp-window.c:240
 msgid "/Edit/Find Ne_xt"
-msgstr "/Editar/_Procurar outra vez"
+msgstr "/Editar/Procurar _Seguinte"
 
-#: src/yelp-window.c:238
-#, fuzzy
+#: src/yelp-window.c:243
 msgid "/Edit/Find Pre_vious"
-msgstr "/Editar/_Procurar outra vez"
+msgstr "/Editar/Procurar _Anterior"
 
-#: src/yelp-window.c:242
+#: src/yelp-window.c:247
 msgid "/_Go"
 msgstr "/_Ir"
 
-#: src/yelp-window.c:243
+#: src/yelp-window.c:248
 msgid "/Go/_Back"
-msgstr "/Ir/_Recuar"
+msgstr "/Ir/_Retroceder"
 
-#: src/yelp-window.c:246
+#: src/yelp-window.c:251
 msgid "/Go/_Forward"
 msgstr "/Ir/_Avançar"
 
-#: src/yelp-window.c:249
+#: src/yelp-window.c:254
 msgid "/Go/_Home"
-msgstr "/Ir/_Casa"
+msgstr "/Ir/_Vista Pessoal"
 
-#: src/yelp-window.c:252
-#, fuzzy
+#: src/yelp-window.c:257
 msgid "/Go/"
-msgstr "/_Ir"
+msgstr "/Ir/"
 
-#: src/yelp-window.c:253
-#, fuzzy
+#: src/yelp-window.c:258
 msgid "/Go/_Previous"
-msgstr "_Anterior"
+msgstr "/Ir/_Anterior"
 
-#: src/yelp-window.c:256
-#, fuzzy
+#: src/yelp-window.c:261
 msgid "/Go/_Next"
-msgstr "/Ir/Índ_ice"
+msgstr "/Ir/_Seguinte"
 
-#: src/yelp-window.c:259
-#, fuzzy
+#: src/yelp-window.c:264
 msgid "/Go/_Contents"
-msgstr "Conteudo Ajuda"
+msgstr "/Ir/_Conteúdo"
 
-#: src/yelp-window.c:263
+#: src/yelp-window.c:268
 msgid "/_Help"
 msgstr "/_Ajuda"
 
-#: src/yelp-window.c:264
+#: src/yelp-window.c:269
 msgid "/Help/_About"
 msgstr "/Ajuda/_Sobre"
 
-#: src/yelp-window.c:326
+#: src/yelp-window.c:331
 msgid "Help Browser"
 msgstr "Navegador de Ajuda"
 
-#: src/yelp-window.c:390
-#, c-format
-msgid "The document '%s' does not exist"
-msgstr "O documento '%s' não existe"
-
-#: src/yelp-window.c:426
+#: src/yelp-window.c:423
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Documentos DocBook SGML já não são suportados."
 
-#: src/yelp-window.c:545
+#: src/yelp-window.c:546
 msgid "Section"
 msgstr "Secção"
 
-#: src/yelp-window.c:598
+#: src/yelp-window.c:603
 msgid "Back"
-msgstr "Recuar"
+msgstr "Retroceder"
 
-#: src/yelp-window.c:599
+#: src/yelp-window.c:604
 msgid "Show previous page in history"
-msgstr "Mostrar página anterior no histórico"
+msgstr "Apresentar página anterior no histórico"
 
-#: src/yelp-window.c:609
+#: src/yelp-window.c:614
 msgid "Forward"
 msgstr "Avançar"
 
-#: src/yelp-window.c:610
+#: src/yelp-window.c:615
 msgid "Show next page in history"
-msgstr "Mostrar página seguinte no histórico"
+msgstr "Apresentar página seguinte no histórico"
 
-#: src/yelp-window.c:622
+#: src/yelp-window.c:627
 msgid "Home"
-msgstr "Casa"
+msgstr "Vista Pessoal"
 
-#: src/yelp-window.c:623
+#: src/yelp-window.c:628
 msgid "Go to home view"
-msgstr "Ir para a vista base"
+msgstr "Ir para a vista pessoal"
 
-#: src/yelp-window.c:791 src/yelp-window.c:822 src/yelp-window.c:1043
-#: src/yelp-window.c:1105
-#, fuzzy, c-format
+#: src/yelp-window.c:796 src/yelp-window.c:825 src/yelp-window.c:1102
+#: src/yelp-window.c:1161
+#, c-format
 msgid "The page '%s' could not be found in this document."
-msgstr "O documento '%s' não existe"
+msgstr "A página '%s' não foi encontrada neste documento."
 
-#: src/yelp-window.c:847
+#: src/yelp-window.c:848
 msgid "Loading..."
-msgstr "A Carregar..."
+msgstr "A Ler..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1186
+#: src/yelp-window.c:1252
 msgid "translator_credits"
 msgstr "Duarte Loreto <happyguy_pt@hotmail.com>"
 
-#: src/yelp-window.c:1191
+#: src/yelp-window.c:1257
 msgid "A Help Browser for GNOME"
 msgstr "Um Navegador de Ajuda para o GNOME"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Obter ajuda sobre o GNOME"
+msgstr "Obtenha ajuda com o GNOME"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Ajuda"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Procurar texto no documento:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Recome_çar automaticamente"
-
-#~ msgid "Find text..."
-#~ msgstr "Procurar texto..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Coincidir palavra compl_eta"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "Coincidir capitalização _maiúscula/minúscula"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Procurar por:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Ambiente de Trabalho"
-
-#~ msgid "Additional documents"
-#~ msgstr "Documentos adicionais"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Páginas Manual"
-
-#~ msgid "Info Pages"
-#~ msgstr "Páginas Info"
-
-#~ msgid "Manual pages"
-#~ msgstr "Páginas manual"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME é"
-
-#~ msgid "Free Software"
-#~ msgstr "Aplicação Livre"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "A Carregar..."
-
-#~ msgid "Index"
-#~ msgstr "Índice"
-
-#~ msgid "Search in the index"
-#~ msgstr "Procurar no índice"
-
-#~ msgid ""
-#~ "Error while parsing the stylesheet, make sure you have your docbook "
-#~ "environment setup correctly."
-#~ msgstr ""
-#~ "Erro ao parsear a folha de estilos, certifique-se que tem o ambiente "
-#~ "docbook correctamente configurado."
-
-#~ msgid "Couldn't parse the document '%s'."
-#~ msgstr "Incapaz de parsear o documento '%s'."
-
-#~ msgid "Error while applying the stylesheet."
-#~ msgstr "Erro ao aplicar a folha de estilos."
-
-#~ msgid "info"
-#~ msgstr "info"
-
-#~ msgid "man"
-#~ msgstr "man"
-
-#~ msgid "Installed documents"
-#~ msgstr "Documentos instalados"
-
-#~ msgid "Start page"
-#~ msgstr "Página inicial"
-
-#~ msgid "Scrollkeeper docs for category"
-#~ msgstr "Docs Scrollkeeper para categoria"
-
-#~ msgid "/File/_Quit"
-#~ msgstr "/Ficheiro/_Sair"
-
-#~ msgid "Important documents"
-#~ msgstr "Documentos importantes"
-
-#~ msgid "Manual pages for section"
-#~ msgstr "Páginas manual para secção"
-
-#~ msgid "Man page sections"
-#~ msgstr "Secções páginas manual"
-
-#~ msgid "Go back in the history list"
-#~ msgstr "Ir atrás na lista de histórico"
-
-#~ msgid "Go forth in the history list"
-#~ msgstr "Ir para a frente na lista de histórico"
-
-#~ msgid "Overview of contents"
-#~ msgstr "Resumo dos conteudos"
-
-#~ msgid "Search for a phrase in the document"
-#~ msgstr "Procurar uma frase no documento"
-
-#~ msgid "Enter phrase to search for in all documents"
-#~ msgstr "Introduza uma frase a procurar em todos os documentos"
-
-#~ msgid ""
-#~ "<html><head><title>This is Yelp, a help browser for GNOME 2.0</title></"
-#~ "head><body bgcolor=\"white\"><h3>Welcome to Yelp!</h3>This is to be a "
-#~ "help browser for GNOME 2.0 written by Mikael Hallendal.<br><br>Please "
-#~ "read the README and TODO<br></body></html>"
-#~ msgstr ""
-#~ "<html><head><title>Este é o Yelp, um navegador da ajuda para o GNOME 2.0</"
-#~ "title></head><body bgcolor=\"white\"><h3>Bem vindo ao Yelp!</h3>Este vai "
-#~ "ser um navegador de ajuda para o GNOME 2.0 escrito pelo Mikael Hallendal."
-#~ "<br><br>Por favor leia o LEIA-ME (README) e A-FAZER (TODO)<br></body></"
-#~ "html>"
-
-#~ msgid "GNOME Helpbrowser"
-#~ msgstr "Navegador de Ajuda GNOME"
