--- a/po/mn.po
+++ b/po/mn.po
@@ -8,111 +8,99 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
-"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-12-30 07:14-0600\n"
-"PO-Revision-Date: 2003-08-23 14:24+0200\n"
-"Last-Translator: Sanlig Badral <Badral@openmn.org>\n"
+"PO-Revision-Date: 2003-12-31 22:13+0800\n"
+"Last-Translator: Dulmandakh <sdulmandakh@yahoo.com>\n"
 "Language-Team: Mongolian <openmn-kdemn@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.2\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Х.программ"
+msgstr "Аплетүүд"
 
-#: data/toc.xml.in.h:2 src/yelp-man.c:429
+#: data/toc.xml.in.h:2
+#: src/yelp-man.c:429
 msgid "Applications"
 msgstr "Х.программ"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Desktop"
+msgstr "Дэлгэц"
 
-#: data/toc.xml.in.h:4 src/yelp-man.c:434
+#: data/toc.xml.in.h:4
+#: src/yelp-man.c:434
 msgid "Development"
 msgstr "Хөгжил"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Хөгжил"
+msgstr "Хөгжүүлэлтийн орчинууд"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Хөгжил"
+msgstr "Хөгжүүлэлтийн хэрэгслүүд"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Editors"
-msgstr "/_Боловсруулах"
+msgstr "Засварлагчууд"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Х.программ"
+msgstr "Сургалтын програмууд"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Тоглоом болон зугаа цэнгэл"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Ерөнхий"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "Тусламж агуулга"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Х.программ"
+msgstr "Интернэт програмууд"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "КДЭ"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Kernel Routines"
+msgstr "Цөмүүд"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Х.программ"
+msgstr "Дуу хөгжмийн програмууд"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Офис болон бүтээмжийн програмууд"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Х.программ"
+msgstr "Шинжлэх ухааны програмууд"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Аюулгүй байдлууд"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Системийн дуудалт"
+msgstr "Систем"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Утилитууд"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Х.программ"
+msgstr "Х.програм"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -120,15 +108,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "Жижиг том үсэг ялгана"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Ол"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Ол:"
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -140,7 +128,7 @@ msgstr "_Гэдрэг хайх"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Тойруулан тэгшил"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -150,31 +138,31 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp үйлдвэр"
 
-#: src/yelp-db-pager.c:241 src/yelp-window.c:758
-#, fuzzy, c-format
+#: src/yelp-db-pager.c:241
+#: src/yelp-window.c:758
+#, c-format
 msgid "The document '%s' could not be opened"
-msgstr "»%s« баримт алга байна"
+msgstr "'%s'  баримт нээгдэхгүй байна"
 
 #: src/yelp-db-pager.c:424
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Елп баримтад href шинж алга"
 
 #: src/yelp-db-pager.c:439
 msgid "Out of memory"
-msgstr ""
+msgstr "Санах ойноос хэтэрлээ"
 
 #: src/yelp-db-pager.c:602
 msgid "Titlepage"
-msgstr ""
+msgstr "Гарчигийн хуудас"
 
 #: src/yelp-db-pager.c:604
-#, fuzzy
 msgid "Contents"
-msgstr "Тусламж агуулга"
+msgstr "Агууллагууд"
 
 #: src/yelp-db-pager.c:622
 msgid "Unknown"
-msgstr ""
+msgstr "Үл мэдэгдэх"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -189,12 +177,19 @@ msgstr "Yelp »%s« идэвхижсэнгүй."
 msgid "Could not open new window."
 msgstr "Шинэ цонх нээгдэх боломжгүй."
 
-#: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
-#: src/yelp-man.c:401 src/yelp-man.c:412
+#: src/yelp-man.c:296
+#: src/yelp-man.c:317
+#: src/yelp-man.c:353
+#: src/yelp-man.c:385
+#: src/yelp-man.c:401
+#: src/yelp-man.c:412
 msgid "X11"
 msgstr "X11"
 
-#: src/yelp-man.c:301 src/yelp-man.c:332 src/yelp-man.c:390 src/yelp-man.c:417
+#: src/yelp-man.c:301
+#: src/yelp-man.c:332
+#: src/yelp-man.c:390
+#: src/yelp-man.c:417
 msgid "OpenSSL"
 msgstr "OpenSSL"
 
@@ -252,21 +247,21 @@ msgstr "Системийн зохион байгуулагч"
 
 # CHECK
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Баримтууд"
+msgstr "Баримтын URI"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "Боловсруулах баримтын URI"
 
 #: src/yelp-toc-pager.c:260
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "ЕлпТокПейжэр: Түр зогсолтын тоо сөрөг байна."
 
-#: src/yelp-toc-pager.c:628 src/yelp-toc-pager.c:640
+#: src/yelp-toc-pager.c:628
+#: src/yelp-toc-pager.c:640
 msgid "The table of contents could not be read."
-msgstr ""
+msgstr "Агуулагын хүснэгт уншигдахгүй байна."
 
 #: src/yelp-toc-pager.c:841
 msgid "Categories"
@@ -294,19 +289,16 @@ msgid "/_Edit"
 msgstr "/_Боловсруулах"
 
 #: src/yelp-window.c:232
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Боловсруулах/Хуудсан дотор х_айх..."
+msgstr "/Засварлах/_Ол..."
 
 #: src/yelp-window.c:235
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/Боловсруулах/_Цааш хайх"
+msgstr "/Засварлах/_Дараагийнхыг ол"
 
 #: src/yelp-window.c:238
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Боловсруулах/_Цааш хайх"
+msgstr "/Засварлах/_Өмнөхийг ол"
 
 #: src/yelp-window.c:242
 msgid "/_Go"
@@ -325,24 +317,20 @@ msgid "/Go/_Home"
 msgstr "/Оч/_Эхлэл"
 
 #: src/yelp-window.c:252
-#, fuzzy
 msgid "/Go/"
-msgstr "/_Оч"
+msgstr "/Оч/"
 
 #: src/yelp-window.c:253
-#, fuzzy
 msgid "/Go/_Previous"
-msgstr "_Гэдрэг хайх"
+msgstr "/Оч/Өмнөх"
 
 #: src/yelp-window.c:256
-#, fuzzy
 msgid "/Go/_Next"
-msgstr "/Оч/_Жигсаалт"
+msgstr "/Оч/_Дараагийн"
 
 #: src/yelp-window.c:259
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Тусламж агуулга"
+msgstr "/Оч/_Агууллагууд"
 
 #: src/yelp-window.c:263
 msgid "/_Help"
@@ -363,7 +351,7 @@ msgstr "»%s« баримт алга байна"
 
 #: src/yelp-window.c:426
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "ДокБүүк-ийн СЖМЛ баримт дэмжигдэхээ болисон."
 
 #: src/yelp-window.c:545
 msgid "Section"
@@ -394,11 +382,13 @@ msgstr "Эхлэл"
 msgid "Go to home view"
 msgstr "Эхлэл рүү очих"
 
-#: src/yelp-window.c:791 src/yelp-window.c:822 src/yelp-window.c:1043
+#: src/yelp-window.c:791
+#: src/yelp-window.c:822
+#: src/yelp-window.c:1043
 #: src/yelp-window.c:1105
-#, fuzzy, c-format
+#, c-format
 msgid "The page '%s' could not be found in this document."
-msgstr "»%s« баримт алга байна"
+msgstr "Энэ баримтанд '%s' хуудас олдсонгүй"
 
 #: src/yelp-window.c:847
 msgid "Loading..."
@@ -410,7 +400,8 @@ msgstr "Ачаалж байна..."
 msgid "translator_credits"
 msgstr ""
 "Санлиг Бадрал <badral@chinggis.com>\n"
-"Очирбат Батзаяа <buuvei@yahoo.com>"
+"Очирбат Батзаяа <buuvei@yahoo.com>\n"
+"Сүхбаатар Дөлмандах <sdulmandakh@yahoo.com>"
 
 #: src/yelp-window.c:1191
 msgid "A Help Browser for GNOME"
@@ -418,60 +409,9 @@ msgstr "Гноме-ийн Тусламж Хөтөч"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "GNOME -н тусламж авах"
+msgstr "ГНОМЕ-р тусламж авах"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Тусламж"
 
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Баримт дотроос текст хайх:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Автоматаар _мөр таслах"
-
-#~ msgid "Find text..."
-#~ msgstr "Текст хайх..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Зөвхөн _бүтэн үгийг авах"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "Том/жижиг бичлэг _ялгахаар"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Хайх:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Desktop"
-
-#~ msgid "Additional documents"
-#~ msgstr "Нэмэлт баримтууд"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Гарын авлага хуудсууд"
-
-#~ msgid "Info Pages"
-#~ msgstr "Мэд-Хуудсууд"
-
-#~ msgid "Manual pages"
-#~ msgstr "Гарын авлага хуудсууд"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME бол"
-
-#~ msgid "Free Software"
-#~ msgstr "чөлөөт программ хангамж"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Ачаалж байна..."
-
-#~ msgid "Index"
-#~ msgstr "Жигсаалт"
-
-#~ msgid "Search in the index"
-#~ msgstr "Жигсаалтад хайх"
