*** empty log message ***

--- a/po/hr.po
+++ b/po/hr.po
@@ -1,15 +1,22 @@
 # Translation of yelp to Croatian
 # Copyright (C) Croatian team
 # Translators: Automatski Prijevod <>,Denis Lackovic <delacko@fly.srk.fer.hr>,Nikola Planinac <>,
+
+# Translation of yelp to Croatian
+# Copyright (C) Croatian team
+# Translators: Automatski Prijevod <>,Denis Lackovic <delacko@fly.srk.fer.hr>,Nikola Planinac <>,
+# Translation of yelp to Croatian
+# Copyright (C) Croatian team
+# Translators: Automatski Prijevod <>,Denis Lackovic <delacko@fly.srk.fer.hr>,Nikola Planinac <>,
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0\n"
 "POT-Creation-Date: 2003-11-06 18:13+0100\n"
-"PO-Revision-Date: 2003-12-30 20:48+CET\n"
-"Last-Translator: auto\n"
+"PO-Revision-Date: 2004-01-02 21:00+CET\n"
+"Last-Translator: Robert Sedak <robert.sedak@sk.tel.hr>\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: TransDict server\n"
 
@@ -270,7 +277,7 @@ msgid "The document '%s' does not exist"
 msgstr "Dokument '%s' ne postoji"
 
 #. Note to translators: put here your name (and address) so it
-#.  * will shop up in the "about" box
+#.   * will shop up in the "about" box
 #: src/yelp-window.c:695
 msgid "translator_credits"
 msgstr "lokalizacija@linux.hr"
