--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-06  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2004-01-06  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
