--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-06  Žygimantas Beručka  <uid0@tuxfamily.org>
+
+	* lt.po: Updated Lithuanian translation.
+
 2004-01-06  Christian Neumair  <chris@gnome-de.org>
 
 	* de.po: Updated German translation.
