- Error dialog for invalid ghelp: URI.
* src/yelp-window.c:
- Error dialog for invalid ghelp: URI.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-07  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-window.c:
+	- Error dialog for invalid ghelp: URI.
+
+2004-01-07  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-db-pager.c:
 	* src/yelp-error.c:
 	* src/yelp-error.h:
