- Gobs more work on the man page parser.
* src/yelp-man-parser.c:
- Gobs more work on the man page parser.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-08  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-man-parser.c:
+	- Gobs more work on the man page parser.
+
 2004-01-07  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
