- Made translations work in XSLT, still need to do plurals.
* po/POTFILES.in:
* stylesheets/Makefile.am:
* stylesheets/db2html-block.xsl:
* stylesheets/db2html-glossary.xsl:
* stylesheets/db2html-header.xsl:
* stylesheets/db2html-html.xsl:
* stylesheets/db2html-inline.xsl:
* stylesheets/db2html-titlepage.xsl:
* stylesheets/db2html-toc.xsl:
* stylesheets/db2html-xref.xsl:
* stylesheets/gettext.xsl:
* stylesheets/l10n.xml:
* stylesheets/l10n.xml.in:
- Made translations work in XSLT, still need to do plurals.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-08  Shaun McCance  <shaunm@gnome.org>
 
+	* po/POTFILES.in:
+	- Made translations work in XSLT, still need to do plurals.
+
+2004-01-08  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-man-parser.c:
 	- Gobs more work on the man page parser.
 
