--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2004-01-06  Žygimantas Beručka  <uid0@tuxfamily.org>
 
 	* lt.po: Updated Lithuanian translation.
